--- a/index.html
+++ b/index.html
@@ -8,13 +8,13 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Blinker:wght@100;200;300;400;600;700;800;900&family=DM+Serif+Text:ital@0;1&family=Open+Sans:ital,wght@0,300..800;1,300..800&family=Poppins:wght@400;500;700&family=Roboto:ital,wght@0,100..900;1,100..900&display=swap" >
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/normalize/8.0.1/normalize.min.css" integrity="sha512-NhSC1YmyruXifcj/KFRWoC561YpHpc5Jtzgvbuzx5VozKpWvQ+4nXhPdFgmx8xqexRcpAglTj9sIBWINXa8x5w==" crossorigin="anonymous" referrerpolicy="no-referrer" />
-    <link rel="stylesheet" href="/assets/css/header/header.css">
-    <link rel="stylesheet" href="/assets/css/global.css">
-    <link rel="stylesheet" href="/assets/css/acordeons/acordeon.css">
-    <link rel="stylesheet" href="/assets/css/acordeons/languages.css">
-    <link rel="stylesheet" href="/assets/css/acordeons/portfolio.css">
-    <link rel="stylesheet" href="/assets/css/acordeons/experience.css">
-    <link rel="stylesheet" href="/assets/css/acordeons/skills.css">
+    <link rel="stylesheet" href="assets/css/header/header.css">
+    <link rel="stylesheet" href="assets/css/global.css">
+    <link rel="stylesheet" href="assets/css/acordeons/acordeon.css">
+    <link rel="stylesheet" href="assets/css/acordeons/languages.css">
+    <link rel="stylesheet" href="assets/css/acordeons/portfolio.css">
+    <link rel="stylesheet" href="assets/css/acordeons/experience.css">
+    <link rel="stylesheet" href="assets/css/acordeons/skills.css">
 </head>
 <body>
 
@@ -124,9 +124,9 @@
 
     </main>
 
-    <script src="/assets/js/acordeon.js"></script>
-    <script src="/assets/js/api.js"></script>
-    <script src="/assets/js/main.js"></script>
+    <script src="assets/js/acordeon.js"></script>
+    <script src="assets/js/api.js"></script>
+    <script src="assets/js/main.js"></script>
     
 </body>
 </html>
