Mudando imports denovo

--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
     <main class="main">
         <header class="header">
 
-            <img src="/assets/img/eu.png" alt="Foto de Perfil" class="photo" id="profile.photo">
+            <img src="assets/img/eu.png" alt="Foto de Perfil" class="photo" id="profile.photo">
 
             <h1 class="title">Olá, <br> eu sou <span class="profile.name" id="profile.name">Carregando...</span></h1>
 
